fix DT-2391, The feature arrow is visible and usable when the navigation menu has been opened.

--- a/less/widgets/widget-navigation.less
+++ b/less/widgets/widget-navigation.less
@@ -61,7 +61,7 @@
     width: 60px;
     height: 100%;
     position: fixed;
-    z-index: 999999;
+    z-index: 9999999;
 
     background-color: @color__navigation--background;
     &:hover {
